correction wrap-reverse

--- a/css/exercice.css
+++ b/css/exercice.css
@@ -12,7 +12,7 @@
 .exercice-align-content-1 .container{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   align-content: center;
 }
 
@@ -27,7 +27,7 @@
 /*5. exercice-align-content-3 */
 .exercice-align-content-3 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   justify-content: right;
   align-content: space-between;
 }
@@ -63,7 +63,7 @@
 .exercice-all-in .container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   align-content: center;
 }
 
